php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44603 HTTP streams wrapper issue with Content-Type header
Submitted: 2008-04-02 02:38 UTC Modified: 2008-04-08 00:03 UTC
From: tobias382 at gmail dot com Assigned: iliaa (profile)
Status: Closed Package: HTTP related
PHP Version: 5.2CVS, 5.3CVS (2008-04-02) OS: Kubuntu 7.10
Private report: No CVE-ID: None
 [2008-04-02 02:38 UTC] tobias382 at gmail dot com
Description:
------------
Specifying a Content-type header in a streams operation using the HTTP wrapper causes a file_get_contents operation using that streams context to fail. Not specifying the Content-type header results in a Notice being issued saying that application/x-www-form-urlencoded is assumed and the script then works as expected.

Reproduce code:
---------------
http://paste2.org/p/18455

Expected result:
----------------
Should send a URL in the following format to stdout, where # is a number.

http://paste2.org/p/#

Actual result:
--------------
Warning: file_get_contents(http://paste2.org/new-paste): failed to open stream: HTTP request failed! HTTP/1.1 404 Not Found in /home/matt/pastebin.php on line 21

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-04-02 15:22 UTC] tobias382 at gmail dot com
The issue is still present in this snapshot: php5.2-200804021430.
 [2008-04-03 14:05 UTC] jani@php.net
There is indeed something very wrong with this. Quick stracing suggests that the order in which the headers are is maybe incorrect and there's an extra '\r\n' there..
 [2008-04-06 15:22 UTC] iliaa@php.net
Fixed in 6 and 5.3, needs to be MFHed to 5.2 post 5.2.6
 [2008-04-08 00:03 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 17 22:00:02 2026 UTC