MFB: Fixed bug #44603 (Order issues with Content-Type/Length headers on POST)